# pythonpy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  setup.cfg
src/pythonpy/: __main__.py  pycompleter.py
