[metadata]
name = pythonpy
url = https://github.com/n8henrie/pythonpy
version = attr: pythonpy.__version__
license = MIT
license_files = LICENSE
description = "Convenient piping with python"
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Nathan Henrie
author_email = nate@n8henrie.com
keywords = pythonpy
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True
install_requires =

[options.extras_require]
test =
    black==22
    flake8==3.3.0
    flake8-docstrings==1.1.0
    flake8-import-order==0.12
    mypy==0.501
    pep8-naming==0.4.1
    pylint==1.7.1
    pytest==6.2.3
    tox==3.23.0
dev =
    build==0.6.0.post1
    recommonmark==0.4.0
    sphinx-rtd-theme==0.1.9
    Sphinx==1.4.9
    twine==3.4.2
    wheel==0.37.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    py = pythonpy.__main__:main
